@@ -216,9 +216,11 @@
   },
   "give": {
     "self-mention": "You cannot mention yourself!",
+    "confirm": "{{user}}, {{author}} wants to send you {{count}} {{emoji}}, do you accept?",
     "banned-user": "This user cannot accept gifts because they're banned from Menhera!",
     "no-dbuser": "This user does not have a Menhera's Bank account!",
     "invalid-value": "The value to be given must be greater than 0",
+    "negated": "{{user}} refused the gift!",
     "poor": "You don't have that many {{field}}",
     "transfered": "You transferred **{{value}}** {{emoji}} to {{user}}",
     "stars": "stars",
@@ -230,7 +232,6 @@
   "loja": {
     "description": "Access the Menhera's thrift store",
     "embed_title": "Menhera's Thrift store",
-    "confirm": "{{user}}, {{author}} wants to send you {{count}} {{emoji}}, do you accept?",
     "colors": {
       "purple": "1 - Dark purple",
       "red": "2 - Red",
@@ -456,7 +457,7 @@
     "sdTitle": "Demigods Leaderboard",
     "godTitle": "Gods Leaderboard",
     "giantTitle": "Giants Leaderboard",
-    "arcangelTitle": "Archangel Leaderboard",
+    "archangelTitle": "Archangel Leaderboard",
     "starsTitle": "Stars Leaderboard",
     "voteTitle": "Upvotes Leaderboard",
     "commands": "Most Used Commands",
